--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 {%- endif -%}
 
     <!-- Google Analytics -->
-    <script src="https://www.googletagmanager.com/gtag/js?id=G-FT018TBY84"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FT018TBY84"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
