fixed nav mobile bg, updated heading in logo section on homepage

--- a/_layouts/homepage-redesign.html
+++ b/_layouts/homepage-redesign.html
@@ -106,7 +106,7 @@
               
               <!-- Companies logos -->
 
-                <h2 class="margin-top">Land your dream role at companies like</h2>
+                <h2 class="margin-top">Land your dream data role at companies like</h2>
 
                 {%- include homepage-logos.html -%}
 
