fixed membership modal for mobile devices

--- a/_includes/membership.html
+++ b/_includes/membership.html
@@ -1,6 +1,6 @@
             <!-- Membership modal -->
 
-              <section class="membership-modal modal-content" id="membershipModal">
+              <section class="membership-modal" id="membershipModal">
                 <div class="close-modal" onclick="toggleMembership(); toggleMenu()">
                   <iconify-icon icon="material-symbols-light:close"></iconify-icon>
                 </div>
