--- a/assets/gitbook/homepage-redesign.css
+++ b/assets/gitbook/homepage-redesign.css
@@ -82,7 +82,7 @@ footer {
     max-width: 768px;
     height: 100%;
     padding: 50px 0px 60px 0px;
-    z-index: 1;
+    z-index: 100000;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -168,7 +168,7 @@ footer {
     padding: 0px 0px 60px 0px;
     align-items: center;
     justify-content: center;
-    z-index: 1;
+    z-index: 100000;
     flex-direction: column;
 }
 
@@ -218,20 +218,50 @@ header {
     width: 100%;
 }
 
+.notification-bar {
+    z-index: 99999;
+    background: rgba(38, 15, 140, 0.90);
+    color: white;
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    padding: 1rem;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    max-width: 100vw;   
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.subscribe-banner {
+    width: 100vw;
+    text-align: center;
+
+}
+
 nav {
+    z-index: 99998;
     display: flex;
     gap: 30px;
-    padding: 20px 16px;
     justify-content: space-between;
     align-items: center;
     background: var(--palette-1-bg-primary, #14132E);
     position: fixed;
     overflow: hidden;
+    padding: 16px;
     top: 0;
     width: 90%;
-    max-width: 1200px;
-    z-index: 1000;
+    max-width: 100vw;
 }
+
+.scrolling-el {
+    padding-top: 90px;
+    transition: padding 0.3s ease;
+  }
 
 .menu-icon {
     font-size: 2.5rem;
@@ -241,19 +271,19 @@ nav {
 }
 
 .menu-modal {
+    z-index: 99999;
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    max-width: 1200px;
+    max-width: 100vw;
     height: 60%;
-    padding: 50px 0px 60px 0px;
+    padding: 100px 0px 60px 0px;
     background-color: #171337;
     align-items: center;
     align-self: center;
     justify-content: center;
-    z-index: 1;
     flex-direction: column;
 }
 
@@ -385,7 +415,7 @@ nav button {
 }
 
 nav .cta-filled {
-    background: linear-gradient(180deg, rgba(58, 9, 255, 0.47) 0%, rgba(31, 7, 125, 0.846) 100%);
+    background: linear-gradient(180deg, rgba(58, 9, 255, 0.6) 0%, rgb(31, 7, 125) 100%);
 }
 
 .cta-filled:hover {
@@ -517,6 +547,11 @@ p {
 
 .left-aligned {
     text-align: left;
+}
+
+.mylink{
+    color: #FFF;
+    
 }
 
 /* Logos and socials list */
@@ -665,7 +700,7 @@ button {
 }
 
 img {
-    padding: 100px 80px;
+    padding: 80px;
     max-width: 400px;
     align-self: center;
 }
@@ -788,7 +823,9 @@ img {
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100vw;
     height: 100%;
+    max-height: 100vh;
     background: rgba(0, 0, 0, 0.7);
   }
 
@@ -798,7 +835,7 @@ img {
 
     img {
         max-width: 200px;
-        padding: 80px 40px;
+        padding: 40px;
         align-self: flex-start;
     }
 
