--- a/_layouts/homepage-redesign.html
+++ b/_layouts/homepage-redesign.html
@@ -21,7 +21,7 @@
       <!-- End data from head.html -->
 
       <!-- CSS -->
-      <link rel="stylesheet" href="/assets/gitbook/homepage-redesign.css">
+      <link rel="stylesheet" href="./assets/gitbook/homepage-redesign.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
       <link rel="stylesheet" href="path-to-iconify-font.css">
 
