changes services section heading

--- a/_layouts/homepage-redesign.html
+++ b/_layouts/homepage-redesign.html
@@ -243,7 +243,7 @@
 
             <!-- Services pricing -->
             <section id="services" class="services-pricing">
-              <h4>Services Pricing</h4>
+              <h4>Mentoring and Coaching Services Pricing</h4>
               <div class="cards-block">
                 <div class="card-color card-interactive service-card">
                   <div class="card-header">                  
