added early bird price

--- a/_layouts/homepage-redesign.html
+++ b/_layouts/homepage-redesign.html
@@ -215,8 +215,8 @@
               </div>
               <div class="service-card card-interactive card-color">
                 <div class="card-header">
-                  <p>Membership Pricing</p>
-                  <h2>$25 / month</h2>
+                  <p>Early Bird Membership Pricing</p>
+                  <h2><span class="crossed-price">$75</span> $25 / month</h2>
                   <div class="txt-flex">
                     <p>or $200 / year</p>
                     <p class="tag"><span>(34% off)</span></p>
