--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -13,7 +13,7 @@ body, main {
 }
 
 section {
-    padding: 0 16px;
+    padding: 1.8em 1em;
     width: 100vw;
     max-width: 740px;
 }
@@ -25,22 +25,17 @@ section {
 }
 
 body {
-    background: var(--palette-1-bg-primary, #12141A);
-    color: var(--palette-1-text-primary, #EFF0F4);
+    background: #EFEFEF;
+    color: #2B3673;
     font-family: 'Source Sans 3', sans-serif;
     margin: 0px;
 }
 
 main {
-    gap: 5em;
     padding: 5em 1em 1em 1em;
 }
 
 footer {
-    background-image: url(/assets/bg-imgs/footer-bg.svg);
-    background-size: contain;
-    background-position: right bottom;
-    background-repeat: no-repeat;
     padding: 2.5em 0;
     margin: 0 1em;
     display: flex;
@@ -50,14 +45,14 @@ footer {
 
 .card-color {
     border-radius: 20px;
-    border: 1px solid #4C4D58;
-    background: #13141E;
+    border: 1px solid #959AB9;
+    background: #EBECF8;
     transition: border 0.3s ease;
 }
 
 .card-interactive:hover {
-    border: 1px solid #2f346e;
-    box-shadow: 2px 2px 15px 0px rgba(255, 255, 255, 0.10), -2px -2px 40px 0px rgba(37, 15, 133, 0.50);
+    border: 1px solid #959AB9;
+    box-shadow: 2px 2px 10px 0px #CCCFEE, -2px -2px 40px 0px #CCCFEE;
 }
 
 
@@ -88,6 +83,7 @@ footer {
 .founder-text-block {
     display: flex;
     flex-direction: column;
+    padding: 1em;
     gap: 20px;
 }
 
@@ -150,11 +146,11 @@ nav .container {
 
 nav {
     z-index: 99998;
-    background: #12141A;
+    background: #EFEFEF;
     position: fixed;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow-y: visible;
     padding: 1em;
     top: 0;
     width: 100vw;
@@ -169,7 +165,7 @@ nav {
     font-size: 2.5rem;
     cursor: pointer;
     display: none;
-    color: #EFF0F4;
+    color: #2B3673;
 }
 
 .menu-modal {
@@ -181,15 +177,15 @@ nav {
     width: 100vw;
     height: 100vh;
     padding: 100px 0px 60px 0px;
-    background-color: #12141A;
+    background-color: #EFEFEF;
     align-items: center;
     align-self: center;
     justify-content: center;
     flex-direction: column;
 }
 
-nav a {
-    color: #fff;
+a {
+    color: #2B3673;
     text-decoration: none;   
     width: max-content; 
 }
@@ -233,7 +229,7 @@ nav a {
     right: 30px;
     font-size: 2rem;
     cursor: pointer;
-    color: #eff0f4;
+    color: #2B3673;
 }
 
 .desktop-banner {
@@ -260,6 +256,97 @@ nav a {
     align-self: stretch;
     gap: 8px;
 }
+
+/* Navigation - Drop-downs */
+
+.dropdown {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+}
+
+.popover-toggle {
+    border: none;
+}
+
+.popover-content {
+    display: none;
+    position: absolute;
+    top: 30px;
+    background-color: #EFEFEF;
+    box-shadow: 0 2px 8px rgba(106, 102, 102, 0.165);
+    padding: 8px 24px 8px 16px;
+    border-radius: 5px;
+  }
+  
+  .popover-content a {
+    display: block;
+    text-decoration: none;
+    padding: 8px 0;
+  }
+
+
+/* Hero */
+
+.hero {
+    padding-top: 0;
+}
+
+.hero .two-col {
+    align-items: center;
+    gap: 0px;
+}
+
+.hero img {
+    width: 40%;
+    border-radius: 23px;
+    box-shadow: 2px 2px 10px 0px #CCCFEE, -2px -2px 40px 0px #CCCFEE;
+}
+
+.h-subject{
+    flex-direction: column;
+    align-items: flex-start;
+    height: 5.5rem;
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    margin: 2em;
+    width: 600px;
+}
+
+.h-container{
+    z-index: 1;
+    margin-top: .3rem;
+    line-height: 1.2rem;
+    position: relative;
+}
+
+.h-row {
+    display: flex;
+}
+
+.h-container h1 {
+    margin: 0;
+}
+
+#profession {
+    margin: 0;
+}
+
+#changingProfession {
+    transition: opacity 3s ease-in-out;
+}
+  
+.fade-out {
+    opacity: 0;
+}
+
+  
+.hero button {
+    width: max-content;
+}
+
+
 
 /* Mobile burger menu */
 
@@ -290,15 +377,11 @@ nav a {
         padding: 15px;
     }
 
-    .menu-modal a {
-        color: #fff;
-        text-decoration: none;
-    }
-
 }
 
 .founder-photo {
     width: 310px;
+    height: 100%;
 }
 
 footer > .two-col {
@@ -335,22 +418,18 @@ details {
     font-size: 1rem;
     font-weight: 400;
     line-height: 150%;
-    transition: 0.3s ease-in;
-}
-
-details:hover {
-    background: #1C1D25;
-    border-radius: 10px;
 }
 
 /* Buttons and links */
 
 .navbar-links a {
     border-bottom: 1px solid rgba(255, 255, 255, 0);
+    line-height: 97%;
+    transition: border 0.3s ease;
 }
 
 .navbar-links a:hover {
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #2B3673;
 }
 
 .service-card a{
@@ -371,7 +450,7 @@ button {
     align-items: center;
     align-self: inherit;
     border-radius: 10px;
-    padding: 16px 20px;
+    padding: 12px 20px;
     margin-bottom: 10px;
     width: 100%;
     cursor: pointer;
@@ -383,42 +462,32 @@ button:disabled {
     pointer-events: none;
 }
 
-nav button {
-    max-width: 240px;
-    min-width: 180px;
-    padding: 15px;
-    background: linear-gradient(180deg, rgba(58, 9, 255, 0.47) 0%, rgba(31, 7, 125, 0.942) 100%);
-}
-
 .cta-filled{
-    border: 1px solid #122694;
-    background: linear-gradient(180deg, rgba(58, 9, 255, 0.47) 0%, rgba(58, 9, 255, 0.35) 100%);
-    transition: 0.3s ease;
+    border: 1px solid #EE9672;
+    background: linear-gradient(90deg, rgba(255,116,57,0.85) 48%, rgba(255,116,57,0.95) 100%);
+    transition: 0.3s ease-in-out;
 }
 
 .secondary {
     border-radius: 10px;
-    border: 1px solid rgba(18, 38, 148, 0.70);
-    background: linear-gradient(180deg, rgba(58, 9, 255, 0.29) 0%, rgba(58, 9, 255, 0.21) 100%);
+    border: solid 1px #efd896;
+    background: #F6E5A7;
+    color: #2B3673;
 }
 
 nav .cta-filled,
 .menu-content .cta-filled {
-    background: linear-gradient(180deg, rgba(58, 9, 255, 0.6) 0%, rgb(31, 7, 125) 100%);
+    color: white;
     padding: 12px 20px;
     border-radius: 10px;
 }
 
 .cta-filled:hover {
-    border-radius: 10px;
-    border: 1px solid #122694;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.05) 100%), linear-gradient(180deg, rgba(58, 9, 255, 0.47) 0%, rgba(58, 9, 255, 0.35) 100%);
+    color: whitesmoke;
+    border: solid 1px #635B96;
+    background: #635B96;
 }
 
-.cta-outlined {
-    border: 1px solid rgba(58, 9, 255, 0.90);
-    background: linear-gradient(0deg, rgba(58, 9, 255, 0.07) 0%, rgba(58, 9, 255, 0.07) 100%), #181A21;
-}
 
 .cta-outlined:hover {
     border-radius: 10px;
@@ -440,16 +509,15 @@ nav .cta-filled,
 }
 
 h1 {
-    color: var(--palette-1-text-primary, #EFF0F4);
     font-family: 'Source Sans 3';
     font-size: 34px;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 135%;
     margin: 2rem 0 0 0;
 }
 
 h2 {
-    color: var(--palette-1-text-primary, #EFF0F4);
+    color: #2B3673;
     font-size: 32px;
     font-weight: 700;
     line-height: 130%;
@@ -457,7 +525,6 @@ h2 {
 }
 
 h3 {
-    color: var(--palette-1-text-primary, #EFF0F4);
     font-size: 25px;
     font-style: normal;
     font-weight: 600;
@@ -475,11 +542,6 @@ h5 {
     font-weight: 500;
 }
 
-p {
-    color: var(--palette-1-text-primary, #EFF0F4);
-    font-size: 1rem;
-}
-
 .bigger-p {
     font-size: 20px;
 }
@@ -493,42 +555,19 @@ footer p {
     margin: 2rem 0 0 0;
 }
 
-.link{
-    color: #FFF;
-    
-}
-
-span {
-    position: relative;
-}
-
-span:before {
-    position: absolute;
-    content: '';
-    height: 0.1em;
-    width: 97%;
-    bottom: .33em;
-    left: 0.04em;
-    z-index: -1;
-    background: #331AA7; 
-}
-
-p span:before {
-    height: 0.35em;
-    bottom: .23em;
-}
-
 .tag {
     z-index: 1;
 }
 
-.light-blue:before {
-    background-color: #2b72b5;
-}
-
 .crossed-price {
     text-decoration: line-through;
-    color: #61636b;
+    color: #B1B5D0;
+}
+
+.orange-txt {
+    color: #fe804c;
+    font-weight: 700;
+    font-size: 32px;
 }
 
 /* Logos and socials list */
@@ -566,14 +605,14 @@ ul {
     align-items: center;
     align-self: stretch;
     gap: 40px;
-    margin: 2rem 0;
+    margin: 2rem 0 0 0;
 }
 
 /* Input */
 
 input {
-    color: var(--palette-1-text-primary, #EFF0F4) !important;
-    background: var(--palette-1-bg-primary, #12141A) !important;
+    color: #2B3673 !important;
+    background: #EFEFEF !important;
     display: flex;
     width: 100%;
     height: 30px;
@@ -603,14 +642,107 @@ input {
     display: none;
     border-radius: 15px;
     border: 1px solid #4C4D58;
-    background: #13141E;
+    background: #FEEFC4;
 }
 
+/* Career track page styles */
+
+.article-wrap {
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    max-width: 1200px;
+}
+
+.article-container {
+    max-width: 768px;
+    width: 100vw;
+}
+
+.article-container img {
+    width: 100%;
+}
+
+.article-container h1,
+.article-container h2 {
+    margin: 120px 0 0.5em 0;
+}
+
+.article-wrap ul {
+    list-style-position: inside;
+}
+
+.sticky-nav {
+    display: none;
+}
 
 /* Desktop styles */
 @media screen and (min-width: 769px) {
 
+/* Career track page styles */
+
+.article-wrap {
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+    max-width: 1200px;
+}
+
+.article-container {
+    max-width: 768px;
+    width: 100vw;
+}
+
+.article-container img {
+    width: 100%;
+}
+
+.article-container h1,
+.article-container h2 {
+    margin: 100px 0 0.5em 0;
+}
+
+.article-wrap ul {
+    list-style-position: inside;
+}
+
+.sticky-nav {
+    display: block;
+    position: sticky;
+    top: 90px;
+    z-index: 100;
+    padding: 10px;
+    height: min-content;
+    margin-top: 17em;
+}
+
+.sticky-nav h4 {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 0.5em;
+}
+
+.sticky-nav ul{
+    list-style: none;
+    
+}
+
+.sticky-nav li{
+    padding: 1em 1em 1em 0;
+    border-bottom: 1px solid #CCCFEE;
+    transition: padding 0.3s ease, background 0.3s ease;
+}
+
+.sticky-nav li:hover{
+    background-color: #E8E9EE;
+    border-radius: 8px;
+    padding: 1em 1em 1em 0.5em;
+}
+
+/* General desktop styles */
+
 section {
+    padding-top: 150px;
     max-width: 1200px;
 }
 
@@ -619,12 +751,7 @@ section {
 }
 
 main {
-    background-image: url(/assets/bg-imgs/main-top-bg.svg);
-    background-size: contain;
-    background-position: center top;
-    background-repeat: no-repeat;
     padding-top: 9em;
-    gap: 150px;
 }
 
 nav {
@@ -632,7 +759,8 @@ nav {
     backdrop-filter: blur(12.5px);
 }
 
-nav .container {
+nav .container,
+footer .container {
     width: 100vw;
 }
 
@@ -652,7 +780,7 @@ nav .container {
 }
 
 .founder-text-block {
-    padding: 3em 0;
+    padding: 3em ;
 
 }
 
@@ -715,10 +843,6 @@ nav .container {
     height: 200px;
 }
 
-.founder-card {
-    padding: 60px 50px 20px 50px;
-}
-
 .mobile-banner {
     display: none;
 }
@@ -744,6 +868,7 @@ footer > .two-col {
 .founder-card .two-col {
     display: flex;
     flex-direction: row;
+    gap: 24px;
 }
 
 /* Desktop - drop down list */
@@ -771,13 +896,13 @@ details {
     font-weight: 400;
     line-height: 150%;
     cursor: pointer;
-    transition: 0.3s ease-in;
+    /* transition: 0.3s ease-in; */
 }
 
-details:hover {
-    background: #1C1D25;
+/* details:hover {
+    background: #EBECF8;
     border-radius: 10px;
-}
+} */
 
 
 /* Tab section - Surfalytics goal */
@@ -789,8 +914,8 @@ details:hover {
 .tab-block {
     display: flex;
     border-radius: 15px;
-    border: 1px solid #4C4D58;
-    background: #13141E;
+    border: 1px solid #959AB9;
+    background: #FEEFC4;
 }
 
 .tab {
@@ -804,9 +929,10 @@ details:hover {
 }
 
 .tablinks {
+    color: #2B3673;
     border: none;
-    border-bottom: 1px solid #4C4D58;
-    background: #1C1D25;
+    border-bottom: 1px solid #B1B5D0;
+    background: #FEEFC4;
     float: left;
     outline: none;
     cursor: pointer;
@@ -826,14 +952,15 @@ details:hover {
 }
 
 .tab button.active {
-    border-bottom: 1px solid #4C4D58;
-    background: #13141E;
+    color: #2B3673;
+    border-bottom: 1px solid #B1B5D0;
+    background: #FFF9E7;
 }
 
 .tab button:hover,
 .tab button.active:hover {
-    border-bottom: 1px solid #4C4D58;
-    background: radial-gradient(26.4% 97.5% at 50% 77.5%, rgba(62, 22, 237, 0.20) 0%, rgba(62, 22, 237, 0.00) 100%), #1C1D25;
+    border-bottom: 1px solid #B1B5D0;
+    background: radial-gradient(circle, rgba(251,229,220,1) 3%, rgba(255,249,231,1) 60%);
 }
 
 
@@ -880,7 +1007,7 @@ li {
 
 h1 {
     font-size: 70px;
-    line-height: 135%;
+    line-height: 125%;
 }
 
 .card-header h2 {
@@ -915,12 +1042,12 @@ h3 {
 
 h4 {
     align-self: stretch;
-    font-size: 36px;
+    font-size: 28px;
 }
 
 footer h4,
 .surfalytics-focus h4 {
-    margin: 1.4rem 0;
+    margin: 0;
 }
 
 h5 {
@@ -929,6 +1056,11 @@ h5 {
 
 p {
     font-size: 1.125rem;
+}
+
+.hero p {
+    font-size: 1.3rem;
+    margin: 1.5em 0;
 }
 
 footer p {
