--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -196,7 +196,7 @@
             <!-- Course promo -->
             <section class="course-promo two-col">
               <div class="col-left">
-                <p>Data Analytics Course</p>
+                <h4>Data Analytics and Engineering Course</h4>
                 <h2>All-in-one, accessible way to learn analytics</h2>
               </div>
               <div class="drop-down">
