hero pic updates

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -63,8 +63,12 @@
                     <button class="cta-filled">Become a member</button>
                   </a>  
                 </div> 
-                <img src="/assets/images/unsplash_QckxruozjRg.png"/>
+                <img src="/assets/images/hero-pic.png"/>
               </div>            
+            </section>
+
+            <section class="photo">
+              <img src="/assets/images/community.png" />
             </section>
 
               <!-- Surfalytics goal -->
