--- a/_layouts/career-track.html
+++ b/_layouts/career-track.html
@@ -83,7 +83,11 @@
                 </a>
 
                 <a href="#section-6">
-                  <li>How course and community helps</li>
+                  <li>How the course can help you</li>
+                </a>
+
+                <a href="#section-7">
+                  <li>How our community can help you</li>
                 </a>
                 
               </ul>
