--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -769,11 +769,6 @@ main {
     padding-top: 9em;
 }
 
-nav {
-    background: rgba(18, 20, 26, 0.01);
-    backdrop-filter: blur(12.5px);
-}
-
 nav .container,
 footer .container {
     width: 100vw;
@@ -893,7 +888,7 @@ footer > .two-col {
 }
 
 summary {
-    font-size: 26px;
+    font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -901,23 +896,23 @@ summary {
 
 details {
     display: flex;
-    padding: 30px 10px 30px 0px;
+    padding: 0.8em 1em 0.5em 0;
     justify-content: center;
     align-items: center;
     align-self: stretch;
-    border-bottom: 1px solid #4C4D58;
-    width: 700px;
+    border-bottom: 1px solid #CCCFEE;
+    width: 768px;
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
     cursor: pointer;
-    /* transition: 0.3s ease-in; */
+    transition: padding 0.3s ease, background 0.3s ease;
 }
 
-/* details:hover {
-    background: #EBECF8;
-    border-radius: 10px;
-} */
+details:hover {
+    background: #ebecf0;
+    padding: 0.8em 1em 0.5em 1em;
+}
 
 
 /* Tab section - Surfalytics goal */
