added content, fixed bugs

--- a/_layouts/career-track.html
+++ b/_layouts/career-track.html
@@ -71,7 +71,7 @@
                 </a>
 
                 <a href="#section-3">
-                  <li>Data analytics tools</li>
+                  <li>Analytics Tools</li>
                 </a>
 
                 <a href="#section-4">
