fixed UI bugs in FAQ section

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -292,7 +292,7 @@
 
             <!-- FAQ -->
             <section id="faq" class="faq">
-              <h4>Frequently Asked Questions</h4>
+              <h2>Frequently Asked Questions</h2>
               {%- include markdown-files/faq.md -%}
 
             </section>
@@ -488,7 +488,7 @@
   
         </div>
          <!-- Copyright info -->
-        <p>Copyright 2024 by Dmitry Anoshin. Designed and developed by <a href="https://www.linkedin.com/in/lala-jafarova/">Lala Jafarova</a>.</p>
+        <p>Copyright 2024 by Dmitry Anoshin. Designed and developed by <a target=’_blank’ href="https://www.lalajafarova.com/">Lala Jafarova</a>.</p>
       </footer>
     </body>
 </html>
