--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -408,6 +408,7 @@ footer > .two-col {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    max-width: 1024px;
 }
 
 summary {
@@ -419,12 +420,12 @@ summary {
 
 details {
     display: flex;
-    padding: 30px 10px 30px 0px;
+    padding: 0.8em 1em 0.5em 0;
     justify-content: center;
     align-items: center;
     align-self: stretch;
-    border-bottom: 1px solid #4C4D58;
-    width: 343px;
+    border-bottom: 1px solid #CCCFEE;
+    max-width: 1024px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 150%;
@@ -561,8 +562,14 @@ h5 {
 }
 
 footer p {
+    color: #2b3673b1;
     text-align: left;
     margin: 2rem 0 0 0;
+}
+
+footer p > a{
+    color: #2b3673b1;
+    border-bottom: 1px solid #2b3673b1;
 }
 
 .tag {
@@ -604,7 +611,8 @@ ul {
     list-style: none;
     display: flex;
     align-self: stretch;
-    justify-content: center;
+    justify-content: space-between;
+    margin: 2em 1em 0 1em;
     gap: 30px;
 }
 
@@ -685,6 +693,12 @@ input {
 .sticky-nav {
     display: none;
 }
+
+.drop-down {
+    width: 580px;
+}
+
+
 
 /* Desktop styles */
 @media screen and (min-width: 769px) {
@@ -883,17 +897,6 @@ footer > .two-col {
 
 /* Desktop - drop down list */
 
-.drop-down {
-    width: 580px;
-}
-
-summary {
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
 details {
     display: flex;
     padding: 0.8em 1em 0.5em 0;
@@ -901,7 +904,7 @@ details {
     align-items: center;
     align-self: stretch;
     border-bottom: 1px solid #CCCFEE;
-    width: 768px;
+    max-width: 1024px;
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
@@ -911,9 +914,15 @@ details {
 
 details:hover {
     background: #ebecf0;
-    padding: 0.8em 1em 0.5em 1em;
+    padding: 0.8em 0 0.5em 1em;
 }
 
+summary {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
 /* Tab section - Surfalytics goal */
 
