fixed photo, added new content

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -76,7 +76,7 @@
               <div class="abt-section card-color">
                 <div class="abt-left">
                   <h5>Your Hub for</h5>
-                  <h2 class="gradient">Data Insights<br>
+                  <h2 class="gradient">Data Job Market Insights<br>
                     Networking and<br>
                     Professional Growth</h2>
                 </div>
