--- a/assets/gitbook/homepage.css
+++ b/assets/gitbook/homepage.css
@@ -991,10 +991,10 @@ footer .container {
     
 }
 
-.founder-text-block {
+/* .founder-text-block {
     padding: 3em ;
 
-}
+} */
 
 .btn-block {
     display: flex;
@@ -1073,13 +1073,14 @@ footer > .two-col {
 }
 
 .founder-photo {
-    width: 490px;
+    width: 430px;
 }
 
 .founder-card .two-col {
     display: flex;
     flex-direction: row;
-    gap: 24px;
+    gap: 40px;
+    padding: 24px 32px;
 }
 
 /* Desktop - drop down list */
